--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,5 +1,14 @@
-db.driverLocation=/Users/open/.m2/repository/mysql/mysql-connector-java/8.0.12/mysql-connector-java-8.0.12.jar
-db.driverClassName=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/esite?characterEncoding=utf-8&useSSL=false
-db.username=root
-db.password=pop007
+
+#MySQL
+#db.driverLocation=/Users/open/.m2/repository/mysql/mysql-connector-java/8.0.12/mysql-connector-java-8.0.12.jar
+#db.driverClassName=com.mysql.cj.jdbc.Driver
+#db.url=jdbc:mysql://127.0.0.1:3306/esite?characterEncoding=utf-8&useSSL=false
+#db.username=root
+#db.password=pop007
+
+#Oracle
+db.driverLocation=/Users/open/Library/Preferences/IntelliJIdea2018.2/jdbc-drivers/oracle/12.1.0.2/ojdbc6-12.1.0.2.jar
+db.driverClassName=oracle.jdbc.driver.OracleDriver
+db.url=jdbc:oracle:thin:@10.10.4.18:1521:orcl
+db.username=cjjdata
+db.password=123456
