--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
                             remove_prefix_and_camel(去除第一个下划线的前部分，后面转驼峰) -->
                         <naming>underline_to_camel</naming>
                         <!-- 表前缀 -->
-                        <tablePrefix></tablePrefix>
+                        <tablePrefix>wwz</tablePrefix>
                         <!--Entity中的ID生成策略（默认 id_worker）-->
                         <idGenType>uuid</idGenType>
                         <!--自定义超类-->
@@ -125,7 +125,7 @@
                     </strategy>
                     <packageInfo>
                         <!-- 父级包名称，如果不写，下面的service等就需要写全包名(默认com.baomidou) -->
-                        <parent>com.weibo</parent>
+                        <parent>com.weibo.mbox</parent>
                         <!--service包名(默认service)-->
                         <service>service</service>
                         <!--serviceImpl包名(默认service.impl)-->
@@ -133,9 +133,9 @@
                         <!--entity包名(默认entity)-->
                         <entity>entity</entity>
                         <!--mapper包名(默认mapper)-->
-                        <mapper>mapper</mapper>
+                        <mapper>dao</mapper>
                         <!--xml包名(默认mapper.xml)-->
-                        <xml>mapper.xml</xml>
+                        <xml>dao.mapper</xml>
                     </packageInfo>
                     <template>
                         <!-- 定义controller模板的路径 -->
